--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" href="ang.css" />
+    <link rel="stylesheet" href="cxd.css" />
     <link rel="stylesheet" href="helper.css" />
     <link rel="stylesheet" href="iconfont.css" />
     
