--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <title>amis demo</title>
+    <title>入住信息登记</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" href="cxd.css" />
+    <link rel="stylesheet" href="sdk.css" />
     <link rel="stylesheet" href="helper.css" />
     <link rel="stylesheet" href="iconfont.css" />
-    
     <style>
       html,
       body,
@@ -31,7 +30,6 @@
     <script type="text/javascript">
       (function () {
         let amis = amisRequire('amis/embed');
-        // 通过替换下面这个配置来生成不同页面
         let amisJSON = {
   "type": "page",
   "title": "",
@@ -116,7 +114,7 @@
                   "required": true,
                   "multiple": false,
                   "receiver": "https://a.gezier.com/index/index/up2",
-                  "accept": ".jpeg, .jpg, .png, .gif",
+                  "maxSize": 3774873.6,
                   "fixedSize": false,
                   "hideUploadButton": false,
                   "autoUpload": true,
@@ -136,7 +134,7 @@
                   "required": true,
                   "multiple": false,
                   "receiver": "https://a.gezier.com/index/index/up2",
-                  "accept": ".jpeg, .jpg, .png, .gif",
+                  "maxSize": 3774873.6,
                   "fixedSize": false,
                   "hideUploadButton": false,
                   "autoUpload": true,
@@ -168,6 +166,51 @@
           },
           "visibleOn": "${num>1}",
           "clearValueOnHidden": true
+        },
+        {
+          "type": "grid",
+          "columns": [
+            {
+              "body": [
+                {
+                  "type": "input-image",
+                  "label": "身份证正面",
+                  "name": "image21",
+                  "imageClassName": "r w-full",
+                  "required": true,
+                  "multiple": false,
+                  "receiver": "https://a.gezier.com/index/index/up2",
+                  "maxSize": 3774873.6,
+                  "fixedSize": false,
+                  "hideUploadButton": false,
+                  "autoUpload": true,
+                  "compress": true,
+                  "compressOptions": {
+                  }
+                }
+              ]
+            },
+            {
+              "body": [
+                {
+                  "type": "input-image",
+                  "label": "身份证反面",
+                  "name": "image22",
+                  "imageClassName": "r w-full",
+                  "required": true,
+                  "multiple": false,
+                  "receiver": "https://a.gezier.com/index/index/up2",
+                  "maxSize": 3774873.6,
+                  "fixedSize": false,
+                  "hideUploadButton": false,
+                  "autoUpload": true,
+                  "compress": true,
+                  "compressOptions": {
+                  }
+                }
+              ]
+            }
+          ]
         }
       ],
       "api": "https://a.gezier.com/index/index/msg"
