--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                   "hideUploadButton": false,
                   "autoUpload": true,
                   "compress": true,
+                  "visibleOn": "${num>1}",
                   "compressOptions": {
                   }
                 }
@@ -205,6 +206,7 @@
                   "hideUploadButton": false,
                   "autoUpload": true,
                   "compress": true,
+                  "visibleOn": "${num>1}",
                   "compressOptions": {
                   }
                 }
