--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" href="sdk.css" />
-    <link rel="stylesheet" href="helper.css" />
-    <link rel="stylesheet" href="iconfont.css" />
+    <link rel="stylesheet" href="sdk.min.css" />
     <style>
       html,
       body,
@@ -428,5 +426,7 @@
         let amisScoped = amis.embed('#root', amisJSON);
       })();
     </script>
+    
+    <link rel="stylesheet" href="iconfont.min.css" />
   </body>
 </html>
