--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
           }
         },
         {
+          "type": "input-text",
+          "label": "手机号",
+          "name": "phone1",
+          "validations": {
+              "isPhoneNumber": true
+          },
+          "required": true
+      },
+        {
           "type": "grid",
           "columns": [
             {
@@ -165,6 +174,17 @@
           "visibleOn": "${num>1}",
           "clearValueOnHidden": true
         },
+        {
+          "type": "input-text",
+          "label": "手机号",
+          "name": "phone2",
+          "validations": {
+              "isPhoneNumber": true
+          },
+          "required": true,
+          "visibleOn": "${num>1}",
+          "clearValueOnHidden": true
+      },
         {
           "type": "grid",
           "columns": [
@@ -234,6 +254,17 @@
           "clearValueOnHidden": true
         },
         {
+          "type": "input-text",
+          "label": "手机号",
+          "name": "phone3",
+          "validations": {
+              "isPhoneNumber": true
+          },
+          "required": true,
+          "visibleOn": "${num>2}",
+          "clearValueOnHidden": true
+      },
+        {
           "type": "grid",
           "columns": [
             {
@@ -302,6 +333,17 @@
           "clearValueOnHidden": true
         },
         {
+          "type": "input-text",
+          "label": "手机号",
+          "name": "phone4",
+          "validations": {
+              "isPhoneNumber": true
+          },
+          "required": true,
+          "visibleOn": "${num>3}",
+          "clearValueOnHidden": true
+      },
+        {
           "type": "grid",
           "columns": [
             {
@@ -369,6 +411,17 @@
           "visibleOn": "${num>4}",
           "clearValueOnHidden": true
         },
+        {
+          "type": "input-text",
+          "label": "手机号",
+          "name": "phone5",
+          "validations": {
+              "isPhoneNumber": true
+          },
+          "required": true,
+          "visibleOn": "${num>4}",
+          "clearValueOnHidden": true
+      },
         {
           "type": "grid",
           "columns": [
